--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "koa": "^2.2.0",
     "koa-route": "^3.2.0",
     "koa-static": "^3.0.0",
+    "lodash": "^4.17.4",
     "superagent": "^3.5.2"
   }
 }
